# AcceleratorLocal

./: .gitmodules  AMBuildScript  AMBuilder  CMakeLists.txt  PackageScript  README.md
.github/workflows/: main.yml
configs/addons/accelerator_local/: accelerator_local.ini
configs/addons/metamod/: accelerator_local.vdf
makefiles/: linux.base.cmake  protobuf.cmake  shared.cmake
makefiles/metamod/: accelerator_local.vdf.in  configure_metamod.cmake
src/: httpmanager.cpp  httpmanager.h  plugin.cpp  plugin.h
